Bug 158416 - Infobars / banners don't use text colour anymore
Summary: Infobars / banners don't use text colour anymore
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Stéphane Guillou (stragu)
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Infobar-UX
  Show dependency treegraph
 
Reported: 2023-11-28 11:03 UTC by Stéphane Guillou (stragu)
Modified: 2024-07-01 15:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Old/New color (12.04 KB, image/png)
2023-11-28 11:14 UTC, Heiko Tietze
Details
PDF of before and after patch (302.12 KB, application/pdf)
2024-06-13 06:02 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2023-11-28 11:03:41 UTC
Infobars got text colours adapted to background colours in 5.4 for bug 105829 but that got lost in 6.1.

Bibisected with linux-64-6.1 to first bad build commit [b94b86dc2bdb09da488c9f0c0f28fb8594e63023] which points to core commit:

commit de1b926fa294273caefb29a507e117b8487e882b
author	Caolán McNamara  Fri Jan 12 16:57:18 2018 +0000
committer	Caolán  Sat Jan 13 22:23:53 2018 +0100
Foreground colors adjusted
to comply with WCAG 2.0 level AAA requiring a contrast of 7:1
Reviewed-on: https://gerrit.libreoffice.org/47825
Comment 1 Heiko Tietze 2023-11-28 11:14:23 UTC
Created attachment 191077 [details]
Old/New color

(In reply to Stéphane Guillou (stragu) from comment #0)
> Bibisected with linux-64-6.1 to first bad build commit..
But this patch just adjusts the color a little bit. The font color seems to be black now (and changing the foreground to 1,0,0 makes only the closing X red, not the text).
Comment 2 Stéphane Guillou (stragu) 2023-11-28 11:24:39 UTC
(In reply to Heiko Tietze from comment #1)
> But this patch just adjusts the color a little bit. The font color seems to
> be black now (and changing the foreground to 1,0,0 makes only the closing X
> red, not the text).
As said in the Design chat, my understanding is that that the new solution in patchset 4 does not bring back rMessageColor inside the switch.
Comment 3 Heiko Tietze 2023-11-28 12:22:05 UTC
True, overlooked the messagecolor. Caolan, how about keeping it simple with rForegroundColor instead?
Comment 4 Stéphane Guillou (stragu) 2024-06-13 06:02:12 UTC
Created attachment 194697 [details]
PDF of before and after patch

PDF shows before and after patch ready for review on gerrit: https://gerrit.libreoffice.org/c/core/+/168761
Comment 5 Commit Notification 2024-07-01 07:07:50 UTC
Stéphane Guillou committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c65127e5f6efcc5db93d2f80b9592f458200d596

tdf#158416: restore infobar text colours

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2024-07-01 07:21:15 UTC
Fixed in 25.2, cherrypick to 24.8 in review: https://gerrit.libreoffice.org/c/core/+/169741
Comment 7 Commit Notification 2024-07-01 15:27:17 UTC
Stéphane Guillou committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e93f8ea5eb67742be34a49399c5395d73d92e054

tdf#158416: restore infobar text colours

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.