tdf#158416: restore infobar text colours

...which were lost with de1b926fa294273caefb29a507e117b8487e882b.
rMessageColor is put back into the switch, but uses the settings' warning
and error colours introduced by d7fd378b533c42f51d1d363f5da30b1fa1281f67
where applicable.
Colours were checked for sufficient contrast in
https://gerrit.libreoffice.org/c/core/+/47825

Change-Id: Iba42020b665e35c34f09b3788bcc973b0f8531d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168761
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit c65127e5f6efcc5db93d2f80b9592f458200d596)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169741
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>